# aiwilli

./: .gitignore  .gitmodules  AGENTS.md  capture-bead.py  dl.py  mprocs.yaml  secrets.env.example  show-bead-status.py
.claude-plugin/: marketplace.json
ambient-agent/: .gitignore  README.md  package.json  tsconfig.json
ambient-agent/docs/: design-vision.md  design.md  spec.md
ambient-agent/examples/: auth-session.json  parser-session.json
ambient-agent/pi/: ambient-agent.ts
ambient-agent/src/: cli.ts  context.ts  git.ts  scope.ts  session.ts  shadow-repo.ts  types.ts  watcher.ts
ambient-agent/test/: context.test.ts  scope.test.ts  session.test.ts
claude/agents/: code-reviewer.md  task-implementer.md
claude/commands/: brainstorm.md
claude/hooks/: hooks.json
claude/hooks/index-transcript/: index_transcript.py
claude/hooks/index-transcript/docs/plans/: 2025-12-05-index-transcript-design.md  2025-12-05-sync-mode-design.md
claude/ida/skills/develop-ida-plugin/: SKILL.md
claude/skills/analyze-with-ida-domain-api/: SKILL.md
claude/skills/brainstorming/: SKILL.md
claude/skills/executing-plans/: SKILL.md
claude/skills/package-ida-plugin/: SKILL.md
claude/skills/requesting-code-review/: SKILL.md  code-reviewer.md
claude/skills/writing-plans/: SKILL.md
claude/statuslines/contextusage/: flake.nix  statusline.py
claude/statuslines/contextusage/src/: main.rs
claude/wb/hooks/index-transcript/: .envrc  .justfile
claude/wb/hooks/index-transcript/docs/plans/: 2025-12-05-sync-mode-design.md
claude/wb/skills/brainstorming/: SKILL.md
claude/wb/skills/codex-review/: SKILL.md
claude/wb/skills/working-with-git/: SKILL.md
claude/wb/skills/working-with-jj/: SKILL.md
claude/wb/skills/working-with-sqlite/: SKILL.md
claude/wb/statuslines/contextusage/: Cargo.toml  flake.nix  statusline.py
claude/wb/statuslines/contextusage/src/: main.rs
docs/plans/: 2026-02-06-model-download-cache-design.md  2026-02-06-model-download-cache.md
ida-api/: ida-domain.md
margin/: .gitignore  README.md  pyproject.toml
margin/docs/demo/: capture_readme_screenshots.mjs  readme-proof.md
margin/docs/demo/sample-project/src/: app.py  helpers.py
margin/docs/demo/sample-project/tests/: test_app.py
margin/docs/plans/: design.md  spec.md
margin/src/margin/: __main__.py  app.py  cli.py  models.py  render.py  server.py  sources.py
margin/src/margin/templates/: review.html.j2
margin/tests/: conftest.py  test_app.py  test_cli.py  test_render.py  test_server.py  test_sources.py  test_version.py
mem0/: AGENTS.md  pyproject.toml
mem0/docs/plans/: design.md  spec.md
mem0/src/agent_session_mem0/: cli.py
memory/: .gitignore  justfile  pyproject.toml
memory/docs/: design.md  spec.md
memory/docs/plans/: intro.md
memory/src/memory_claw/: __main__.py
memory/src/memory_claw/adapters/: base.py  claude_adapter.py  pi_adapter.py
memory/src/memory_claw/cli/: app.py
memory/src/memory_claw/config/: loader.py  models.py
memory/src/memory_claw/domain/: memory_doc.py  messages.py  observations.py
memory/src/memory_claw/eval/: __init__.py  harness.py
memory/src/memory_claw/io/: cost_ledger.py  fs_paths.py  git_ops.py  markdown_writer.py  project_context.py
memory/src/memory_claw/llm/: client.py  extractor_agents.py  reflector_agent.py
memory/src/memory_claw/pipeline/: extractor_runner.py  reflector.py  scheduler.py  watcher.py
memory/src/memory_claw/prompts/: loader.py
memory/src/memory_claw/store/: db.py  repositories.py  schema.sql
memory/tests/: test_critical_pipeline.py
ocr/: .gitignore  ocr.py
rm2-capture/: .gitignore  pyproject.toml
rm2-capture/docs/plans/: design.md  spec.md
rm2-capture/src/rm2_capture/: __init__.py  __main__.py  config.py  email_monitor.py  models.py  processor.py  writer.py
rm2-capture/tests/: test_config.py  test_processor.py  test_writer.py
scripts/: github-to-prompt.py  rm2-pipe-obsidian.py  vnote-pipe-obsidian.py
scripts/tests/: test_vnote_pipe_obsidian.py
transcribe/: Makefile  README.md  VoxtralBridge.h  main.swift  spec.md
tw/: .gitignore  CLAUDE.md  README.md  design-claude-1.md  design-codex-1.md  design-gemini3-1.md  design.md  flake.nix  pyproject.toml
tw/.claude/: settings.local.json
tw/docs/: tui-requirements.md
tw/docs/plans/: 2025-12-04-backlog-implementation-plan.md  2025-12-04-backlog-mechanism-design.md  2025-12-04-tw-design.md  2025-12-04-tw-implementation.md  2025-12-04-watch-tree-design.md  2025-12-04-watch-tree-implementation.md  2025-12-15-schema-simplification-design.md  2025-12-15-schema-simplification-plan.md  2025-12-15-tw-claude-command-design.md
tw/scripts/: migrate_taskwarrior.py
tw/src/tw/: backend.py  cli.py  config.py  ids.py  models.py  refs.py  render.py  schema.py  schema.sql  service.py  tui.py  watch.py
tw/src/tw/templates/: digest.md.j2  onboard.md.j2  tree.txt.j2  view.md.j2  view_body.md.j2  view_links.txt.j2
tw/tests/: conftest.py  test_backend.py  test_cli.py  test_config.py  test_e2e.py  test_edit.py  test_ids.py  test_models.py  test_refs.py  test_render.py  test_schema.py  test_service.py  test_service_sqlite_integration.py  test_sqlite_backend.py  test_tui.py  test_watch.py
weave/: .gitignore  AGENTS.md  README.md  pyproject.toml
weave/docs/plans/: design.md  spec.md
weave/docs/research/: agent-sessions.md  github-activity.md
weave/scripts/: once.sh  parse_session.py  poc.py  render_github_activity.py  setup_google_credentials.py
weave/src/weave/: __init__.py  app.py  cli.py  drive_activity.py  github_activity.py  layout.py  vault_index.py
weave/tests/: test_app.py  test_cli.py  test_drive_activity.py  test_github_activity.py  test_vault_index.py
