[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "margin"
version = "0.1.0"
description = "Static snapshot code review workspace"
requires-python = ">=3.12"
dependencies = [
  "jinja2>=3.1.6",
  "pathspec>=0.12.1",
  "pydantic>=2.11.9",
  "pygments>=2.19.2",
  "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[project.scripts]
margin = "margin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
margin = ["py.typed", "templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
