[project]
name = "agent-session-mem0"
version = "0.1.0"
description = "Ingest Claude Code and Pi agent sessions into mem0 for fact/preference/entity extraction"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "mem0ai>=1.0",
    "rich>=13.0",
    "faiss-cpu>=1.7",
]

[project.scripts]
agent-session-mem0 = "agent_session_mem0.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "mem0.*"
ignore_missing_imports = true
